# oradb

./: .gitignore  DEPLOY_GUIDE.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STATUS.md  README.md  check-files.sh  debug-sql.sh  deploy-to-rocky8.sh  prompt-for-ai.md  pyproject.toml  requirements-gui.txt  requirements.txt  restart-gui.sh  setup.py  test-api.sh  test-deploy.sh  test-infra.sh
docs/: INSTALLATION_GUIDE.md  README.md
docs/deployment/: GITHUB_GUIDE.md  PACKAGE_SUMMARY.md  PYPI_GUIDE.md  README.md
docs/development/: CONTRIBUTING.md  DEVELOPER_GUIDE.md
docs/guides/: GUIDE_UTILISATION.md  QUICKSTART.md  SCRIPTS_MAPPING.md
docs/reference/: CHEAT_SHEET.md  INSTALL.yml
examples/: README.md  db-config-dev.yml  db-config-production.yml  production-config.yml  rac-config.yml  system-check.sh
guide/: CHANGELOG.md  CLI_REFACTORING_SUMMARY.md  INSTALLATION_GUIDE.md  INTEGRATION_SUMMARY.md  PACKAGE_SUMMARY.md  QUICKSTART.md  QUICK_INSTALL.md  README.md  TESTING.md  WHAT_IS_NEW.md
oracledba/: __init__.py  cli.py  setup_wizard.py  web_server.py
oracledba/configs/: default-config.yml
oracledba/modules/: __init__.py  asm.py  database.py  dataguard.py  downloader.py  flashback.py  install.py  nfs.py  pdb.py  precheck.py  rac.py  response_files.py  rman.py  security.py  testing.py  tuning.py
oracledba/scripts/: README.md  install-oracle-complete.sh  tp01-system-readiness.sh  tp02-environment-setup.sh  tp02-installation-binaire.sh  tp03-creation-instance.sh  tp03a-install-software.sh  tp03a-install-v2.sh  tp03b-rocky8-dbca.sh  tp04-fichiers-critiques.sh  tp04-multiplexing.sh  tp05-gestion-stockage.sh  tp05-tablespaces.sh  tp06-securite-acces.sh  tp06-security.sh  tp07-flashback.sh  tp08-rman.sh  tp12-multitenant.sh  tp13-ai-foundations.sh  tp14-mobilite-concurrence.sh  tp15-asm-rac-concepts.sh  tp15-asm-rac.sh
oracledba/utils/: __init__.py  logger.py  oracle_client.py
scrypts/: git-init-push.ps1  git-push.bat  install.sh  push-to-github.sh  tp01-centos9-setup.sh  tp01-rocky8-manual.sh  tp01-rocky8-setup.sh  tp02-rocky8-environment.sh  tp03-rocky8-install.sh  tp08-15-combined.sh  tp09-dataguard.sh  tp10-tuning.sh  tp11-patching.sh  tp13-ai-ml.sh  tp14-concurrency.sh
tests/: conftest.py  test_precheck.py  test_response_files.py
(+19 files in other folders)
